--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
           {% endfor %}
         </div>
       </div>
+
+      <button id="submit">Submit</button>
     </div>
 
     <script src="script.js"></script>
